# demo

./: .env.example  README.md  fix_indexes.py  pyproject.toml  setup_mongodb.sh
backend/: __init__.py  agent.py  database.py  main.py  memory.py  tools.py
